--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-alert",
+  "name": "@blaumaus/react-alert",
   "description": "A simple react alert component",
-  "version": "7.0.3",
+  "version": "7.0.4",
   "author": "Reinaldo Schiehll <rn.schiehll@gmail.com>",
   "main": "dist/cjs/react-alert.js",
   "module": "dist/esm/react-alert.js",
@@ -53,8 +53,8 @@
     "rollup-plugin-uglify": "^6.0.3"
   },
   "peerDependencies": {
-    "react": "^16.8.1 || ^17",
-    "react-dom": "^16.8.1 || ^17"
+    "react": "^16.8.1 || ^17 || ^18",
+    "react-dom": "^16.8.1 || ^17 || ^18"
   },
   "jest": {
     "collectCoverageFrom": [
